--- a/css/wiki.css
+++ b/css/wiki.css
@@ -14,6 +14,7 @@ main {
 div#Infobox {
     float: right;
     border-style: groove;
+    border-color: #efefef;
     width: 280px;
     margin: 16px;
     padding: 4px;
@@ -53,6 +54,8 @@ nav#Contents {
     max-width: 300px;
     margin: 16px;
     padding: 4px;
+    border-style: inset;
+    border-color: #efefef;
 }
 
 summary#ContentsDropdown {
