Updated wiki.css Specified the widths of the borders. Contents list is set to 4 pixels, while the infobox is set to 8 pixels.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -15,6 +15,7 @@ div#Infobox {
     float: right;
     border-style: groove;
     border-color: #efefef;
+    border-width: 8px;
     width: 280px;
     margin: 16px;
     padding: 4px;
@@ -56,6 +57,7 @@ nav#Contents {
     padding: 4px;
     border-style: inset;
     border-color: #efefef;
+    border-width: 4px;
 }
 
 summary#ContentsDropdown {
