Updated wiki.css Added styling to the infobox's name pronunciation section.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -54,6 +54,16 @@ span#OtherNameTitle {
     font-weight: bold;
 }
 
+/* ------ Infobox name pronunciation ------ */
+
+div#NamePronunciation {
+    margin: 2px;
+}
+
+span#NamePronunciationTitle {
+    font-weight: bold;
+}
+
 /* ====== Contents ====== */
 
 nav#Contents {
