Updated wiki.css Added styling to the infobox's `Sex Assigned at Birth' section.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -84,6 +84,16 @@ span#AbilitiesTitle {
     font-weight: bold;
 }
 
+/* ------ Sex assigned at birth ------ */
+
+div#SexAssignedAtBirth {
+    margin: 2px;
+}
+
+span#SexAssignedAtBirthTitle {
+    font-weight: bold;
+}
+
 /* ====== Contents ====== */
 
 nav#Contents {
