--- a/css/dialog.css
+++ b/css/dialog.css
@@ -1,4 +1,5 @@
 /* Modal dialog's backdrop */
 ::backdrop {
     background-image: linear-gradient(45deg, red, orange, yellow, green, blue, purple);
+    opacity: 0.75;
 }
