--- a/css/dialog.css
+++ b/css/dialog.css
@@ -3,3 +3,8 @@
     background-image: linear-gradient(45deg, red, orange, yellow, green, blue, purple);
     opacity: 0.75;
 }
+
+dialog {
+    background-color: #1f1f1f;
+    color: #e5e5e5;
+}
