--- a/css/wiki.css
+++ b/css/wiki.css
@@ -150,6 +150,13 @@ section#Lead {
     contain: content;
 }
 
+/* ====== Justify paragraphs ====== */
+
+p.cleanly-defined-edges {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
 /* ====== Return to top ====== */
 a#ReturnToTop {
     font-family: 'Arimo', 'Linux Biolinum', 'Kurinto Sans', 'Arial', 'Noto Sans', sans-serif;
