Updated index.css Imported web font `Noto Serif Balinese'.

--- a/css/index.css
+++ b/css/index.css
@@ -87,6 +87,9 @@
 /* Noto Serif */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif');
 
+/* Noto Serif Balinese */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Balinese');
+
 /* Noto Serif Display */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display');
 
