Updated index.css Imported web font `Noto Sans NKo'.

--- a/css/index.css
+++ b/css/index.css
@@ -63,6 +63,9 @@
 /* Noto Sans Myanmar */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar');
 
+/* Noto Sans NKo */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+NKo');
+
 /* Noto Sans Oriya */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Oriya');
 
