Updated wiki.css Changed the infobox title's margins to 8px, instead of the browser's default of 20px.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -40,6 +40,11 @@ div#InfoboxTitle {
     margin: 4px;
 }
 
+p#InfoboxName {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
 /* ------ Image ------ */
 
 div#InfoboxImage {
