--- a/css/wiki.css
+++ b/css/wiki.css
@@ -107,6 +107,7 @@ div#SexAssignedAtBirth {
 }
 
 p#Sex {
+    margin-top: 8px;
     margin-bottom: 1px;
 }
 
@@ -121,6 +122,7 @@ div#Gender {
 }
 
 p#LeGender {
+    margin-top: 8px;
     margin-bottom: 1px;
 }
 
@@ -135,6 +137,7 @@ div#Pronoun {
 }
 
 p#Pronouns {
+    margin-top: 8px;
     margin-bottom: 1px;
 }
 
@@ -173,6 +176,7 @@ div#Sexuality {
 }
 
 p#Sexualities {
+    margin-top: 8px;
     margin-bottom: 1px;
 }
 
