Updated wiki.css Added new styling for the infobox's `Abilities' section. This change being the setting of the top and bottom margins to 8px.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -96,6 +96,11 @@ div#Abilities {
     margin: 2px;
 }
 
+p#Ability {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
 span#AbilitiesTitle {
     font-weight: bold;
 }
