Updated wiki.css Added new styling for the infobox's `Species' section. That change being the setting of the top and bottom margins to 8px.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -86,6 +86,11 @@ div#Species {
     margin: 2px;
 }
 
+p#Race {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
 span#SpeciesTitle {
     font-weight: bold;
 }
