Updated wiki.css Added new styling to the infobox's `Pronunciation' section. That change being the setting of the top and bottom margins to 8px.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -76,6 +76,11 @@ div#NamePronunciation {
     margin: 2px;
 }
 
+p#Pronunciation {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
 span#NamePronunciationTitle {
     font-weight: bold;
 }
