Updated wiki.css Added new styling for the infobox's `Japanese name' and `Other names' sections. That changed being the setting of the top and bottom margins to 8px.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -65,6 +65,12 @@ div#OtherName {
     margin: 2px;
 }
 
+p#NameInJapan,
+p#OtherNames {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
 span#JapaneseNameTitle,
 span#OtherNameTitle {
     font-weight: bold;
