--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,7 @@ body {
     color: #e5e5e5;
     padding-right: 2px;
     padding-left: 2px;
+    font-size: 16px; /* Defines `1rem' */
 }
 
 /* ====== Header styles ====== */
@@ -140,7 +141,7 @@ footer {
 
 /* # Heading 1 */
 h1 {
-    font-size: 43px;
+    font-size: 2.5rem;
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -149,7 +150,7 @@ h1 {
 
 /* ## Heading 2 */
 h2 {
-    font-size: 36px;
+    font-size: 2.25rem;
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -158,7 +159,7 @@ h2 {
 
 /* ### Heading 3 */
 h3 {
-    font-size: 32px;
+    font-size: 2rem;
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -167,7 +168,7 @@ h3 {
 
 /* #### Heading 4 */
 h4 {
-    font-size: 27px;
+    font-size: 1.75rem;
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -176,7 +177,7 @@ h4 {
 
 /* ##### Heading 5 */
 h5 {
-    font-size: 24px;
+    font-size: 1.5rem;
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -185,7 +186,7 @@ h5 {
 
 /* ###### Heading 6 */
 h6 {
-    font-size: 21px;
+    font-size: 1.25rem;
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -195,13 +196,13 @@ h6 {
 /* ====== Paragraph styles ====== */
 
 p {
-    font-size: 20px;
+    font-size: 1rem;
 }
 
 /* ====== Anchor link styles ====== */
 
 a {
-    font-size: 20px;
+    font-size: 1rem;
 }
 
 /* Unvisited links */
@@ -213,7 +214,7 @@ a:link {
 
 button {
     font-family: 'Arimo', 'Linux Biolinum', 'Kurinto Sans', 'Arial', 'Noto Sans', sans-serif;
-    font-size: 16px;
+    font-size: 1.1rem;
 }
 
 /* ====== <span> styles ====== */
