Updated wiki.css Added styling for the infobox's `Occupation' section.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -138,6 +138,21 @@
         font-weight: bold;
     }
     
+    /* ~~~~~~ Occupation ~~~~~~ */
+    
+    div#Occupation {
+	    margin: 2px;
+    }
+    
+    p#Job {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+    
+    span#OccupationTitle {
+        font-weight: bold;
+    }
+    
     /* ~~~~~~ Sex assigned at birth ~~~~~~ */
     
     div#SexAssignedAtBirth {
