Updated wiki.css Added styling for the infobox's `Age' section.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -241,6 +241,21 @@
         color: hotpink;
     }
     
+    /* ~~~~~~ Age ~~~~~~ */
+    
+    div#Age {
+        margin: 2px;
+    }
+    
+    p#PersonsAge {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+    
+    span#AgeTitle {
+        font-weight: bold;
+    }
+    
     /* >>>>>> Contents <<<<<< */
     
     nav#Contents {
