Updated wiki.css Added styling for the infobox's `Height' section.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -271,6 +271,21 @@
         font-weight: bold;
     }
     
+    /* ~~~~~~ Height ~~~~~~ */
+    
+    div#Height {
+        margin: 2px;
+    }
+    
+    p#PersonsHeight {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+    
+    span#HeightTitle {
+        font-weight: bold;
+    }
+    
     /* >>>>>> Contents <<<<<< */
     
     nav#Contents {
